@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Fri Jun 18 18:08:54 CEST 2010 - werner@suse.de
+
+- Remove redundant dependencies in the .depend.* makefiles
+
+-------------------------------------------------------------------
 Tue Jun 15 14:05:31 CEST 2010 - werner@suse.de
 
 - Do not forget the aliases in the makefiles
